# colette

./: .gitignore  .pre-commit-config.yaml  README.md  coffee-roulette.Rmd  coffee-roulette.md  coffee.py  colette.py  paper.bib  paper.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
colette/: __init__.py  __main__.py  data.py  models.py  smtp.py  solver.py  storage.py
colette/email/: __init__.py  base.py  mail_macos.py  outlook_macos.py  outlook_windows.py  smtp.py
colette/storage/: sqlite.py
colette/web/: api.py  server.py
colette/web/static/: app.js  index.html  style.css
data/: people.csv  round_001.csv  round_002.csv  round_003.csv  round_004.csv  round_005.csv  round_006.csv  round_007.csv  round_008.csv  round_009.csv  round_010.csv  round_011.csv  round_012.csv  round_013.csv  round_014.csv  round_015.csv
test_data/: email.ini  excluded.template  organiser.template  people.csv
tests/: test_data.py  test_main.py  test_solver.py  test_storage.py  test_web.py
tests/email/: test_base.py  test_mail_macos.py
tests/test_data/: buyer.template  excluded.template  overrides.csv  round_0010.txt
