[tool.poetry]
name = "colette"
version = "0.1.4"
description = "Manage rounds of coffee roulette"
authors = ["David Horsley <david.e.horsley@gmail.com>", "Genevieve Phillips"]
license = "AGPL3"
readme = "README.md"
homepage = "https://github.com/dehorsley/colette"
repository = "https://github.com/dehorsley/colette.git"

[tool.poetry.dependencies]
python = "^3.9"
mip = "^1.13"
Jinja2 = "^2.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
colette = "colette.__main__:main"
