[tool.poetry]
name = "colette"
version = "0.2.4"
description = "Manage rounds of coffee roulette"
authors = ["David Horsley <david.e.horsley@gmail.com>"]
license = "AGPL3"
readme = "README.md"
homepage = "https://github.com/dehorsley/colette"
repository = "https://github.com/dehorsley/colette.git"

[tool.poetry.dependencies]
python = "^3.10"
mip = "^1.13"
Jinja2 = "^3.1"
tomlkit = "^0.12.1"
appscript = { version = "^1.2.2", platform = "darwin" }
pywin32 = { version = "^306", platform = "win32" }

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
colette = "colette.__main__:main"
