[project]
name = "colette"
version = "0.2.5-dev"
description = "Manage rounds of coffee roulette"
authors = [{ name = "David Horsley", email = "david.e.horsley@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "AGPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "mip>=1.13,<2",
    "Jinja2>=3.1,<4",
    "tomlkit>=0.12.1,<0.13",
    "appscript>=1.2.2,<2 ; sys_platform == 'darwin'",
    "pywin32>=306,<307 ; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/dehorsley/colette"
Repository = "https://github.com/dehorsley/colette.git"

[project.scripts]
colette = "colette.__main__:main"

[dependency-groups]
dev = ["pytest>=7.4.3,<8"]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"
